# opencash

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh
cmake/: android-toolchain.cmake
include/opencash/controller/: ManagedObjectContext.h
include/opencash/core/: Account.h  AccountsMeta.h  ManagedObject.h  ModelObserver.h  ObservableModel.h  Split.h  Transaction.h  TransactionsMeta.h  definitions.h
include/opencash/model/: Account.h  ManagedObject.h  Split.h  Transaction.h  definitions.h
libopencash/: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.gradle  build.sh  gradle-build.sh
libopencash/gradle/wrapper/: gradle-wrapper.properties
libopencash/include/opencash/api/: Api.h  ApiExceptions.h
libopencash/include/opencash/controller/: DocumentController.h  ManagedObjectContext.h
libopencash/include/opencash/core/: Account.h  Api.h  DocumentController.h  ManagedObjectContext.h
libopencash/include/opencash/datastore/: OpenCashWriter.h  WriterInterface.h
libopencash/include/opencash/model/: Account.h  Split.h  Transaction.h  TransactionsMeta.h  definitions.h
libopencash/src/: CMakeLists.txt
libopencash/src/api/: Api.cpp  ApiExceptions.cpp
libopencash/src/controller/: DocumentController.cpp  ManagedObjectContext.cpp
libopencash/src/core/: Account.cpp  Api.cpp  DocumentController.cpp  ManagedObjectContext.cpp  ObservableModel.cpp  Split.cpp  build-odb-generated.sh
libopencash/src/datastore/: OpenCashWriter.cpp
libopencash/src/model/: Account.cpp  Transaction.cpp
libopencash/test/: AccountTest.cpp  ApiTest.cpp  CMakeLists.txt  DocumentControllerTest.cpp  ManagedObjectContextTest.cpp  SplitTest.cpp  TestAccount.cpp  TestApi.cpp  TestDocumentController.cpp  TestManagedObjectContext.cpp  TestSplit.cpp  TestTransaction.cpp
libopencash/travis/: after_success.sh
opencash-cocoa/OpenCash-Framework.xcodeproj/xcuserdata/sgebhar.xcuserdatad/xcschemes/: OpenCash-iOS.xcscheme
src/: CMakeLists.txt
src/controller/: DocumentController.cpp  ManagedObjectContext.cpp
src/core/: Account.cpp  AccountsMeta.cpp  CMakeLists.txt  ManagedObject.cpp  ManagedObjectContext.cpp  ModelObserver.cpp  Transaction.cpp  TransactionsMeta.cpp
src/model/: Account.cpp  ManagedObject.cpp  Split.cpp  TransactionsMeta.cpp
test/: CMakeLists.txt  TestAccount.cpp  TestManagedObjectContext.cpp  TestSplit.cpp
test/mock/: MockModelObserver.h
